deviding containers on stopped and running restart, start, stop etc

--- a/src/main/resources/static/css/page.css
+++ b/src/main/resources/static/css/page.css
@@ -2,3 +2,12 @@ body {
     font-family: "Times New Roman", Times, serif;
     font-size: 14px;
 }
+
+.space-2 {
+    margin-left: 2em
+}
+
+.space-4 {
+    margin-left: 4em
+}
+
