--- a/src/main/resources/static/app/views/environment.html
+++ b/src/main/resources/static/app/views/environment.html
@@ -1,95 +1,11 @@
 <div class="container-fluid" ng-init="init()">
-    <!-- New running app modal -->
-    <div id="newRunAppModal" class="modal fade" role="dialog">
-        <div class="modal-dialog">
-            <!-- Modal content-->
-            <div class="modal-content">
-                <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal">&times;</button>
-                    <h4 class="modal-title">Run new app</h4>
-                </div>
-                <div class="modal-body">
-                    <table class="table table-striped table-bordered text-center">
-                        <caption><h4>Available images from registry</h4></caption>
-                        <tbody>
-                        <tr>
-                            <th class="text-center">Name</th>
-                            <th class="text-center">Versions</th>
-                            <th class="text-center">Actions</th>
-                        </tr>
-                        <!--<#include "appCreateAndStartInfoModal.ftl" >-->
-                            <tr ng-repeat="imageName in images" ng-controller="selectedImageController">
-                                <td>{{imageName.name}}</td>
-                                <td>
-                                    <select ng-change="$scope.selectedImage = selectedImage" ng-model="selectedImage">
-                                        <option ng-repeat="tag in imageName.tags" value="{{imageName.name}}:{{tag}}">
-                                            {{tag}}
-                                        </option>
-                                    </select>
-                                </td>
-                                <td>
-                                    <button data-toggle="modal" data-target="#newAppCreateAndStartInfoModal"
-                                            ng-click="setSelectedImage(selectedImage);">Start
-                                    </button>
-                                </td>
-
-                            </tr>
-                        </tbody>
-                    </table>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <!-- New stopping app modal -->
-    <div id="newStopAppModal" class="modal fade" role="dialog">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal">&times;</button>
-                    <h4 class="modal-title">Create new app</h4>
-                </div>
-                <div class="modal-body">
-                    <table class="table table-striped table-bordered text-center">
-                        <caption><h4>Available images from registry</h4></caption>
-                        <tbody>
-                        <tr>
-                            <th class="text-center">Name</th>
-                            <th class="text-center">Versions</th>
-                            <th class="text-center">Actions</th>
-                        </tr>
-                        <!--<#include "appCreationInfoModal.ftl" >-->
-                            <tr ng-repeat="imageName in images" ng-controller="selectedImageController">
-                                <td>{{imageName.name}}</td>
-                                <td>
-                                    <select ng-change="$scope.selectedImage = selectedImage" ng-model="selectedImage">
-                                        <option ng-repeat="tag in imageName.tags" value="{{imageName.name}}:{{tag}}">
-                                            {{tag}}
-                                        </option>
-                                    </select>
-                                </td>
-                                <td>
-                                    <button data-toggle="modal" data-target="#newAppCreationInfoModal"
-                                            ng-click="setSelectedImage(selectedImage);">Create
-                                    </button>
-                                </td>
-
-                            </tr>
-                        </tbody>
-                    </table>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                </div>
-            </div>
-        </div>
-    </div>
-
+    <div ng-include="'/app/views/modals/create-container-modal.html'" ></div>
     <table class="table table-striped table-bordered table-condensed text-center" ng-repeat="host in hosts" ng-controller="hostController" ng-init="init(host, environmentId)">
-        <caption><h3>{{host.name}}</h3><h4>({{host.url}})</h4></caption>
+        <caption>
+            <h3>{{host.name}}</h3>
+            <h4>({{host.url}})</h4>
+            <button class="glyphicon glyphicon-plus" data-toggle="modal" data-target="#create-container-modal" ng-click="setSelectedHost(host)"></button>
+        </caption>
         <tbody>
         <tr>
             <td class="col-lg-6" ng-include="'/app/views/tables/running-containers.html'"></td>
