--- a/src/main/resources/static/app/views/tables/running-containers.html
+++ b/src/main/resources/static/app/views/tables/running-containers.html
@@ -1,7 +1,5 @@
 <table class="table table-striped table-bordered text-center">
-    <caption><h4>Running apps</h4>
-        <button class="glyphicon glyphicon-plus" data-toggle="modal" data-target="#newRunAppModal"></button>
-    </caption>
+    <caption><h4>Running apps</h4></caption>
     <tbody>
     <tr>
         <th class="text-center">Name</th>
