--- a/src/main/resources/static/app/views/tables/stopped-containers.html
+++ b/src/main/resources/static/app/views/tables/stopped-containers.html
@@ -1,7 +1,5 @@
 <table class="table table-striped table-bordered table-condensed text-center full-width-div">
-    <caption><h4>Stopped apps</h4>
-        <button class="glyphicon glyphicon-plus" data-toggle="modal" data-target="#newStopAppModal"></button>
-    </caption>
+    <caption><h4>Stopped apps</h4></caption>
     <tbody>
     <tr>
         <th class="text-center">Name</th>
