end of refactoring

--- a/src/main/resources/static/app/views/tables/running-containers.html
+++ b/src/main/resources/static/app/views/tables/running-containers.html
@@ -15,7 +15,7 @@
             <button ng-click="restartContainer(container)">restart</button>
             <button ng-click="stopContainer(container)">stop</button>
             <button ng-click="deleteContainer(container)">remove</button>
-            <button ng-click="openLogs(container)">logs</button>
+            <button ng-click="openLogs(host, container)">logs</button>
         </td>
     </tr>
     </tbody>
