--- a/src/main/resources/static/app/views/modals/detail-create-container-modal.html
+++ b/src/main/resources/static/app/views/modals/detail-create-container-modal.html
@@ -14,10 +14,17 @@
                     <label for="port">Port:</label>
                     <input type="text" class="form-control" id="port" placeholder="Optional" ng-model="selectedPort">
                 </div>
+                <div class="checkbox">
+                    <label>
+                        <input type="checkbox" ng-model="isStart" ng-init="isStart=false" ng-true-value="true" ng-false-value="false">
+                        Start after creation
+                    </label>
+                </div>
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-                <button type="button" class="btn btn-default" data-dismiss="modal" ng-click="createContainer(selectedContainerName, selectedPort)">Ok
+                <button type="button" class="btn btn-default" data-dismiss="modal"
+                        ng-click="createContainer(selectedContainerName, selectedPort, isStart)">Ok
                 </button>
             </div>
         </div>
