--- a/src/main/resources/static/app/views/environments.html
+++ b/src/main/resources/static/app/views/environments.html
@@ -1,5 +1,9 @@
+<div ng-include="'/app/views/modals/create-environment-modal.html'" ></div>
 <table class="table table-striped table-bordered text-center">
-    <caption><h4>Environments</h4></caption>
+    <caption><h4>Environments</h4>
+        <button class="glyphicon glyphicon-plus" data-toggle="modal" data-target="#create-environment-modal">
+        </button>
+    </caption>
     <tbody>
     <tr>
         <th class="text-center">Name</th>
