--- a/src/main/resources/static/app/views/environment.html
+++ b/src/main/resources/static/app/views/environment.html
@@ -1,14 +1,16 @@
 <div class="container-fluid" ng-init="init()">
-    <div ng-include="'/app/views/modals/create-container-modal.html'" ></div>
-    <div ng-include="'/app/views/modals/add-host-modal.html'" ></div>
-    <div class="center-block">
+    <div ng-include="'/app/views/modals/create-container-modal.html'"></div>
+    <div ng-include="'/app/views/modals/add-host-modal.html'"></div>
+    <div class="text-center">
         <button class="glyphicon glyphicon-hdd" data-toggle="modal" data-target="#add-host-modal"></button>
     </div>
-    <table class="table table-striped table-bordered table-condensed text-center" ng-repeat="host in hosts" ng-controller="hostController" ng-init="init(host, environmentId)">
+    <table class="table table-striped table-bordered table-condensed text-center" ng-repeat="host in hosts"
+           ng-controller="hostController" ng-init="init(host, environmentId)">
         <caption>
             <h3>{{host.name}}</h3>
             <h4>({{host.url}})</h4>
-            <button class="glyphicon glyphicon-plus" data-toggle="modal" data-target="#create-container-modal" ng-click="setSelectedHost(host)"></button>
+            <button class="glyphicon glyphicon-plus" data-toggle="modal" data-target="#create-container-modal"
+                    ng-click="setSelectedHost(host)"></button>
         </caption>
         <tbody>
         <tr>
