--- a/src/main/resources/static/app/views/environment.html
+++ b/src/main/resources/static/app/views/environment.html
@@ -2,6 +2,9 @@
     <div ng-include="'/app/views/modals/create-container-modal.html'"></div>
     <div ng-include="'/app/views/modals/add-host-modal.html'"></div>
     <div class="text-center">
+        <h3>{{activeEnvironment.name}}</h3>
+    </div>
+    <div class="text-center">
         <button class="glyphicon glyphicon-hdd" data-toggle="modal" data-target="#add-host-modal"></button>
     </div>
     <table class="table table-striped table-bordered table-condensed text-center" ng-repeat="host in hosts"
