--- a/src/main/resources/static/app/views/modals/create-environment-modal.html
+++ b/src/main/resources/static/app/views/modals/create-environment-modal.html
@@ -10,11 +10,20 @@
                     <label for="name">Environment name:</label>
                     <input type="text" class="form-control" id="name" ng-model="newEnvironmentName"/>
                 </div>
+                <div class="form-group">
+                    <label for="swarmHosts">Swarm hosts:</label>
+                    <select class="form-control" id="swarmHosts" ng-model="swarmHost">
+                        <option value="{{host}}" ng-repeat="host in allHosts">
+                            {{host.name}}
+                        </option>
+                    </select>
+                </div>
+
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
                 <button type="button" class="btn btn-default" data-dismiss="modal"
-                        ng-click="createEnvironment(newEnvironmentName)">Ok
+                        ng-click="createEnvironment(newEnvironmentName, swarmHost)">Ok
                 </button>
             </div>
         </div>
